<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nombre"
        android:layout_marginTop="10dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="15dp"
        android:id="@+id/anterior"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/entrada"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOcho"
                android:id="@+id/ocho"
                android:layout_weight="0.18"
                android:layout_marginLeft="8dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNueve"
                android:id="@+id/nueve"
                android:layout_weight="0.18" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCinco"
                android:id="@+id/cinco"
                android:layout_weight="0.32"
                android:layout_marginLeft="8dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSeis"
                android:id="@+id/seis"
                android:layout_weight="0.32" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSiete"
                android:id="@+id/siete"
                android:layout_weight="0.32"
                android:layout_marginRight="8dp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDos"
                android:id="@+id/dos"
                android:layout_weight="0.32"
                android:layout_marginLeft="8dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTres"
                android:id="@+id/tres"
                android:layout_weight="0.32" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCuatro"
                android:id="@+id/cuatro"
                android:layout_weight="0.2"
                android:layout_marginRight="8dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDivision"
                android:id="@+id/division"
                android:layout_weight="0.32"
                android:layout_marginLeft="8dp"
               />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCero"
                android:id="@+id/cero"
                android:layout_weight="0.32" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUno"
                android:id="@+id/uno"
                android:layout_weight="0.32"
                android:layout_marginRight="8dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnResta"
                android:id="@+id/resta"
                android:layout_weight="0.32"
                android:layout_marginLeft="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSuma"
                android:id="@+id/suma"
                android:layout_weight="0.32" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMulti"
                android:id="@+id/multi"
                android:layout_weight="0.32"
                android:layout_marginRight="8dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAC"
                android:id="@+id/AC"
                android:layout_weight="0.32"
                android:layout_marginLeft="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCE"
                android:id="@+id/CE"
                android:layout_weight="0.32" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnIgual"
                android:id="@+id/igual"
                android:layout_weight="0.32"
                android:layout_marginRight="8dp"/>
        </LinearLayout>


        </LinearLayout>


</LinearLayout>
